# zookeeper-operator

./: .gitignore  Cargo.lock.license  Cargo.nix  Cargo.toml  Makefile  NOTICE  README.adoc  crate-hashes.json  default.nix
.github/: dependabot.yml
.github/workflows/: build_artifacts.yml  daily_security.yml  docker.yml  rust.yml
crd/: Cargo.toml
crd/src/: error.rs  lib.rs  util.rs
deploy/crd/: zookeepercluster.crd.yaml
docker/: Dockerfile
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: building.adoc  index.adoc
examples/: simple-zookeepercluster.yaml
operator/: Cargo.toml
operator/src/: error.rs  lib.rs
rust/operator-binary/: build.rs
rust/operator-binary/src/: main.rs
rust/operator/src/: lib.rs
rust/stackable-pvc-provisioner/: Cargo.toml  stackable-local-sc.yaml
rust/stackable-pvc-provisioner/src/: main.rs
server/: Cargo.toml
server/packaging/: buildrpm.sh
server/packaging/debian/: service
server/packaging/rpm/SOURCES/stackable-zookeeper-operator-server-VERSION/usr/lib/systemd/system/: stackable-zookeeper-operator-server.service
server/packaging/rpm/SPECS/: stackable-zookeeper-operator-server.spec
server/src/: main.rs
