[package]
name = "stackable-pvc-provisioner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
futures = "0.3.17"
k8s-openapi = { version = "0.13.0", features = ["v1_22"] }
kube = "0.60.0"
kube-runtime = "0.60.0"
snafu = "0.6.10"
tokio = { version = "1.12.0", features = ["full"] }
